Update and rename portfolio-2.html to ocodi.html

--- a/_portfolio/ocodi.html
+++ b/_portfolio/ocodi.html
@@ -1,6 +1,6 @@
 ---
 title: "OcODi Streamlit App"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+excerpt: "Explore OcODi in our Streamlit App <br/><img src='/images/ocodi.jpg'>"
 collection: portfolio
 ---
 
