--- a/_portfolio/unga_stance.html
+++ b/_portfolio/unga_stance.html
@@ -1,6 +1,6 @@
 ---
 title: "UNGA Stances Streamlit App"
-excerpt: "Explore how positive and negative countries talk about each other in our Streamlit App <br/><img src='/images/ocodi.jpg'>"
+excerpt: "Explore how positively and negatively countries talk about each other in this Streamlit App <br/><img src='/images/unga_stanges.jpg'>"
 collection: portfolio
 ---
 
