--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Science Communication and Outreach"
 permalink: /portfolio/
 author_profile: true
 ---
