--- a/_portfolio/unga_stance.html
+++ b/_portfolio/unga_stance.html
@@ -1,6 +1,6 @@
 ---
 title: "UNGA Stances Streamlit App"
-excerpt: "Explore how positively and negatively countries talk about each other in this Streamlit App <br/><img src='/images/unga_stanges.jpg'>"
+excerpt: "Explore how positively and negatively countries talk about each other in this Streamlit App <br/><img src='/images/unga_stances.jpg'>"
 collection: portfolio
 ---
 
