--- a/_portfolio/unga_stance.html
+++ b/_portfolio/unga_stance.html
@@ -5,7 +5,7 @@ collection: portfolio
 ---
 
 <iframe
-  src="https://unga-stances.streamlit.app/?embed=true"
+  src="https://unga-stance.streamlit.app/?embed=true"
   height="450"
   style="width:100%;border:none;"
 ></iframe>
