--- a/_portfolio/unga.html
+++ b/_portfolio/unga.html
@@ -1,1 +1,11 @@
+---
+title: "UN General Assembly Stance Streamlit App"
+excerpt: "Explore how positively and negatively countries talk about each other in this Streamlit App <br/><img src='/images/unga_stances.jpg'>"
+collection: portfolio
+---
 
+<iframe
+  src="https://kfeapps-conflict-intensity-streamlitapp-auon5d.streamlit.app/?embed=true"
+  height="1200"
+  style="width:100%;border:none;"
+></iframe>
