--- a/_portfolio/unga.html
+++ b/_portfolio/unga.html
@@ -5,7 +5,7 @@ collection: portfolio
 ---
 
 <iframe
-  src="https://kfeapps-conflict-intensity-streamlitapp-auon5d.streamlit.app/?embed=true"
+  src="https://unga-stance.streamlit.app/?embed=true"
   height="1200"
   style="width:100%;border:none;"
 ></iframe>
