--- a/_portfolio/unga.html
+++ b/_portfolio/unga.html
@@ -7,5 +7,6 @@ collection: portfolio
 <iframe
   src="https://unga-stance.streamlit.app/?embed=true"
   height="1200"
+  width="1600"
   style="width:100%;border:none;"
 ></iframe>
